--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -134,7 +134,7 @@
 				<form class="navbar-form navbar-right" role="search">
         			<div class="form-group">
         			    <input type="text" class="form-control" placeholder="Username">
-          				<input type="text" class="form-control" placeholder="Password">
+          				<input type="password" class="form-control" placeholder="Password">
         			</div>
       			</form>
 			</div>
@@ -168,9 +168,9 @@
 				      	<label for="email">Email</label>
 				     	<input type="text" class="form-control" id="content" name="email">
 				     	<label for="password">Password</label>
-				     	<input type="text" class="form-control" id="content" name="password">
+				     	<input type="password" class="form-control" id="content" name="password">
 				     	<label for="passwordconfirm">Confirm Password</label>
-				     	<input type="text" class="form-control" id="content" name="passwordconfirm">
+				     	<input type="password" class="form-control" id="content" name="passwordconfirm">
 				    </div>
 				    <input type="submit" id="submitBtn" class="btn btn-default" value="Register"></input>
 				</form>
