--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -158,19 +158,24 @@
 
 		<!-- PANEL -->
 		<!-- NO EASY WAY TO CHANGE THEIR COLORS BUT GOOGLE IT IN FREE TIME -->
- 		<div class="btn-group btn-group-justified" role="group" aria-label="...">
+ 	<!-- 	<div class="btn-group btn-group-justified" role="group" aria-label="...">
   			<div class="btn-group" role="group">
     			<button type="button" class="btn btn-default btn-success selectButton">My Posts</button>
   			</div>
-  			<!-- <div class="btn-group" role="group">
+  			<div class="btn-group" role="group">
     			<button type="button" class="btn btn-default selectButton">Photos</button>
-  			</div> -->
+  			</div>
   			<div class="btn-group" role="group">
     			<button type="button" class="btn btn-default selectButton">Favorites</button>
   			</div>
 
 		</div>
-		<br/>
+		<br/> -->
+		<div class="panel panel-default ">
+ 			<div class="panel-body">
+ 				<h3>My Posts</h3>
+ 			</div>
+ 		</div>
 
 		<!-- PANEL -->
 		<div class="panel panel-default ">
@@ -194,7 +199,7 @@
 
 			<br/>
 			<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 11 </button>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
+			<button type="button" class="downvote btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> 1 </button>
 			<button type="button" class="btn btn-default favorite pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
 
   			</div>
@@ -219,7 +224,7 @@
 
 			<br/><br/>
 			<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 23 </button>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
+			<button type="button" class="downvote btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> 2 </button>
 			<button type="button" class="btn btn-default favorite pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>  
 
 			</div>
@@ -245,7 +250,7 @@
 
 			<br/><br/>
 			<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 12 </button>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
+			<button type="button" class="downvote btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> 0 </button>
 			<button type="button" class="btn btn-default favorite pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
   			
   			</div>
