--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
 	 <script src="js/jquery-1.11.0.min.js"></script>
+  <script src="js/nutriton.js"></script>
 
 	<!-- Lightbox -->
 	<link href="css/lightbox.css" rel="stylesheet" />
@@ -41,6 +42,14 @@
 		font-size: 22pt;
 		text-shadow: 1px 1px 2px #17A57D;
 	}
+
+  #remainingC {
+    font-size: 0.9em;
+  }
+
+  .form-group {
+    font-size: 1.2em;
+  }
 
 .navbar-default {
   background-color: #87b822;
@@ -230,8 +239,9 @@
 				      	<label for="title">Title:</label>
 				      	<input type="text" class="form-control" id="title" placeholder="Title" name="title">
 				      	<label for="content">Content:</label>
-				     	<input type="text" class="form-control" id="content" placeholder="Content" name="content">
-				    </div>
+				     	  <input type="text" class="form-control contentBox" id="content" placeholder="Content" maxlength="2000" name="content">
+				      <span id="remainingC"></span>
+            </div>
 				   	<a name="bottom">
 				    <button type="button" id="newPostSubmitButton" class="btn btn-default">Post</button>
 				</form>
@@ -247,7 +257,6 @@
 	
 	<!-- The following two js are Lightbox jquery scripts -->
 	<script src="js/lightbox.min.js"></script>
-	<script src="js/nutriton.js"></script>
 
 	
   </body>
